gcc/testsuite/gfortran.dg/pr93604.f90
! { dg-do compile }

program p
   type t
      integer :: a
   end type
   type(t) :: x
   data x /t(z'1')/ ! { dg-error "cannot appear in a structure constructor" }
end

